async-stream/tests/ui/yield_in_closure.stderr
error[E0658]: yield syntax is experimental
 --> $DIR/yield_in_closure.rs:7:17
  |
7 |                 yield v;
  |                 ^^^^^^^
  |
  = note: for more information, see https://github.com/rust-lang/rust/issues/43122

error[E0628]: generators cannot have explicit parameters
 --> $DIR/yield_in_closure.rs:6:23
  |
6 |             .and_then(|v| {
  |                       ^^^

error[E0277]: expected a `std::ops::FnOnce<(&str,)>` closure, found `[generator@$DIR/tests/ui/yield_in_closure.rs:6:23: 8:51 _]`
 --> $DIR/yield_in_closure.rs:6:14
  |
6 |             .and_then(|v| {
  |              ^^^^^^^^ expected an `FnOnce<(&str,)>` closure, found `[generator@$DIR/tests/ui/yield_in_closure.rs:6:23: 8:51 _]`
  |
  = help: the trait `std::ops::FnOnce<(&str,)>` is not implemented for `[generator@$DIR/tests/ui/yield_in_closure.rs:6:23: 8:51 _]`
